# sbwt_lcs_gpu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  debug.sh  make_folders.sh  release.sh  run.txt  turso.sbatch
cmake/: CompilerWarnings.cmake  Options.cmake  Profiling.cmake
gen_fastq/: .gitignore  debug.sh  gen.py  simple_fastq_parser.py
include/: SBWT.hpp  balance_files.hpp  base.txt  circular.hpp  circular_impl.hpp  poppy.hpp  sanity_test.h  structs.hpp  timer.hpp  utils.h
include/gpu/: gpu_utils.cuh  gpu_utils.h  kernels.h
src/: gpu_utils.cu  kernels.cu  main.cpp  sanity_test_cpu.cpp  sanity_test_gpu.cu  utils.cpp
